Created the new Core Project.

--- a/Helpline/Helpline.csproj
+++ b/Helpline/Helpline.csproj
@@ -28,6 +28,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TypeScriptToolsVersion>2.8</TypeScriptToolsVersion>
+    <_MigrateToProjectGuid>597650eb-9ad3-4ff6-97dc-fb572aa77e1a</_MigrateToProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
