Updated the properties on the Administrator view models.

--- a/CTS.Business/CTS.Business.csproj
+++ b/CTS.Business/CTS.Business.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Objects\CustomValidators\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CTS.Data\CTS.Data.csproj" />
+  </ItemGroup>
+
 </Project>
